# trading_bot

./: .env.example  .gitignore  .project-meta.json  ARCHITECTURE_SIMPLIFIED.md  CITATION.cff  Dockerfile.api  LICENSE  LIMITATIONS.md  LIVE_ANALYSIS.md  PRODUCT_MARKET_FIT.md  PROTOTYPE_MARKET_VALUE.md  QUANTUM_TRADING_SYSTEM_AUDIT_COMPLET.md  README.md  SECURITY.md  START.md  __init__.py  docker-compose.yml  live_scanner.py  main.py  pyproject.toml  quantum.db  requirements.txt  run_ict_menu.py  run_ict_scanner.py  safe_refactor.py  start.sh  test_passlib.py
analysis/: __init__.py  divergences.py  ichimoku.py  multi_tf.py  smc.py  wyckoff.py
api/: auth.py  main.py
backtest/: engine.py  monte_carlo.py  paper_trading.py  trading_costs.py
config/: settings.py
core/: __init__.py  cointegration.py  hurst.py  regime_detector.py  scorer.py  zscore.py
data/: __init__.py  data_sources.py  downloader.py  feature_engine.py  kalman_filter.py  sentiment.py  validator.py
db/: cache.py  migrations.py  models.py
docs/: ICT_FULL_SETUP_GUIDE.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/journal/: page.tsx
frontend/src/app/learn/: page.tsx
frontend/src/app/learn/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/risk/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/trade/: page.tsx
frontend/src/components/: MarketReplay.tsx  Sidebar.tsx  TradingChart.tsx
frontend/src/lib/: api.ts  experience.ts
ml/: ensemble.py  features.py  model.py  optimizer.py  service.py  trainer.py
plans/: advanced_features_prd.md  enhanced_reporting_prd.md  pivot_strategy.md
reporting/: __init__.py  alerts.py  interface.py  scan_coordinator.py
risk/: calendar.py  circuit_breaker.py  manager.py  portfolio.py  var_calculator.py
scripts/: academy_init.py  init_db.py
src/quantum/: DEPRECATED.py  __init__.py
src/quantum/application/backtest/: __init__.py  engine.py  monte_carlo.py  paper_trading.py  trading_costs.py
src/quantum/application/coach/: __init__.py  auto_postmortem.py  confusion_resolver.py  mistake_predictor.py  reverse_engineering.py  what_if_simulator.py
src/quantum/application/execution/: service.py
src/quantum/application/reporting/: alerts.py  interface.py  scan_coordinator.py
src/quantum/application/ui/: streamlit_app.py
src/quantum/domain/analysis/: __init__.py  divergences.py  ichimoku.py  ict_full_setup.py  intermarket.py  multi_tf.py  smc.py  social_sentiment.py  wyckoff.py
src/quantum/domain/coach/: __init__.py  explainer.py  history.py  validator.py
src/quantum/domain/core/: cointegration.py  hurst.py  regime_detector.py  scorer.py  zscore.py
src/quantum/domain/data/: data_sources.py  downloader.py  feature_engine.py  kalman_filter.py  realtime.py  sentiment.py  validator.py
src/quantum/domain/innovations/: __init__.py  confusion_resolver.py  mistake_predictor.py  postmortem.py  whatif_simulator.py
src/quantum/domain/ml/: __init__.py  ensemble.py  features.py  model.py  optimizer.py  service.py  trainer.py
src/quantum/domain/risk/: __init__.py  calendar.py  circuit_breaker.py  manager.py  portfolio.py  var_calculator.py
src/quantum/domain/strategies/: __init__.py  multi_strategy.py
src/quantum/engine/: orchestrator.py
src/quantum/infrastructure/api/: __init__.py  main.py
src/quantum/infrastructure/api/core/: deps.py  security.py
src/quantum/infrastructure/api/routers/: __init__.py  academy.py  analysis.py  auth.py  backtest.py  journal.py  market.py  risk.py  trading.py
src/quantum/infrastructure/db/: cache.py  migrations.py  models.py  secrets.py  session.py
src/quantum/infrastructure/exchanges/: binance_client.py  ibkr_client.py
src/quantum/infrastructure/ui/: dashboard.py
src/quantum/shared/config/: __init__.py  settings.py
src/quantum/shared/social/: twitter_client.py
src/quantum/shared/utils/: audit.py  resilience.py
src/quantum/shared/web3/: __init__.py  engine.py
src/quantum/shared/web3/analyzers/: __init__.py  cross_chain_oracle.py  mempool_analyzer.py  (+1 more)
strategies/: __init__.py  multi_strategy.py
tests/: test_advanced_features.py  test_api_auth.py  test_api_market.py  test_ict_full_setup.py  test_institutional_robustness.py  test_paper_trading.py  test_regime_detector.py  test_robustness.py  test_smc.py  test_strategies.py  test_validator.py  test_wyckoff.py
utils/: logger.py
web3_innovation/: __init__.py  engine.py  settings.py
web3_innovation/analyzers/: __init__.py  cross_chain_oracle.py  mempool_analyzer.py  onchain_sentiment.py
web3_innovation/clients/: __init__.py  quicknode_client.py  websocket_manager.py
web3_innovation/hooks/: __init__.py  signal_dispatcher.py
web3_innovation/models/: __init__.py  mempool_types.py
web3_innovation/utils/: __init__.py  address_classifier.py
(+12 files in other folders)
