[project]
name = "quantum-trading-system"
version = "2.0.0"
description = "Système de trading quantitatif haute précision avec ML et analyse multi-sources"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Quantum Trading Team"}
]
keywords = [
    "trading",
    "quantitative",
    "machine-learning",
    "forex",
    "cryptocurrency",
    "algorithmic-trading",
    "backtesting",
    "technical-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pandas>=2.2.3",
    "numpy>=2.2.0",
    "scipy>=1.14.1",
    
    # Data Sources
    "yfinance>=0.2.50",
    "ccxt>=4.4.0",
    "requests>=2.32.3",
    
    # Technical Analysis
    "pandas-ta>=0.3.14b",
    
    # Machine Learning
    "scikit-learn>=1.6.0",
    "xgboost>=2.1.3",
    
    # Backtesting
    "vectorbt>=0.26.2",
    
    # Utilities
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.0",
    "pydantic>=2.10.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
ml-advanced = [
    "lightgbm>=4.5.0",
    "catboost>=1.2.7",
    "optuna>=4.1.0",
    "shap>=0.46.0",
]

deep-learning = [
    "tensorflow>=2.18.0",
    "keras>=3.7.0",
]

notifications = [
    "python-telegram-bot>=21.8",
    "discord-webhook>=1.3.0",
    "apprise>=1.9.0",
]

dashboard = [
    "flask>=3.1.0",
    "dash>=2.18.0",
    "plotly>=5.24.0",
    "streamlit>=1.41.0",
]

dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
    "hypothesis>=6.120.0",
]

all = [
    "quantum-trading-system[ml-advanced,notifications,dashboard,dev]",
]

[project.scripts]
qts = "main:main"
qts-analyze = "main:run_analysis"
qts-backtest = "main:run_backtest"

[project.urls]
Homepage = "https://github.com/username/quantum-trading-system"
Documentation = "https://github.com/username/quantum-trading-system#readme"
Repository = "https://github.com/username/quantum-trading-system"
Issues = "https://github.com/username/quantum-trading-system/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analysis", "backtest", "config", "core", "data", "ml", "reporting", "risk", "utils"]

# ============================================
# RUFF - Linter & Formatter (remplace flake8, isort, black)
# ============================================
[tool.ruff]
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "B904",   # raise without from
]

[tool.ruff.lint.isort]
known-first-party = ["analysis", "backtest", "config", "core", "data", "ml", "reporting", "risk", "utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ============================================
# MYPY - Type Checking
# ============================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Progressif
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "xgboost.*",
    "yfinance.*",
]
ignore_missing_imports = true

# ============================================
# PYTEST - Testing
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ============================================
# COVERAGE
# ============================================
[tool.coverage.run]
source = ["analysis", "backtest", "core", "data", "ml", "reporting", "risk", "utils"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
